/advance/ is nearly done. The banners just need a translated variant.

--- a/japan/advance/chao.html
+++ b/japan/advance/chao.html
@@ -32,7 +32,7 @@ body{
               <table width="522" border="0" cellspacing="1" cellpadding="1" bgcolor="#000000">
                 <tr> 
                   <td bgcolor="#2CC120"> 
-                    <div align="center"><font size="4" color="#FF0000"><b><font size="3" color="#FFFFFF">The world's first linkage with "Sonic Adventure 2 Battle"!</font></b></font></div>
+                    <div align="center"><font size="4" color="#FF0000"><b><font size="3" color="#FFFFFF">The world's first linkage with Sonic Adventure 2 Battle!</font></b></font></div>
                   </td>
                 </tr>
               </table>
@@ -41,7 +41,7 @@ body{
         </tr>
         <tr> 
           <td><font size="2"><img src="image/chao.gif" width="76" height="102" align="left"><br>
-            The Game Boy Advance version of "Sonic Advance" and the Nintendo GameCube version of "Sonic Adventure 2 Battle" are linked!<br>
+            The Game Boy Advance version of Sonic Advance and the Nintendo GameCube version of Sonic Adventure 2 Battle are linkable!<br>
             </font><font size="2"><br>
             You can move your Chao between the Game Boy Advance and GameCube, allowing you to raise your own Chao anytime, anywhere.</font></td>
         </tr>
@@ -56,7 +56,7 @@ body{
             <table width="522" border="0" cellspacing="1" cellpadding="1" bgcolor="#000000">
               <tr> 
                 <td bgcolor="#FF9900"> 
-                  <div align="center"><font size="5"><font size="2"><b><font size="3">"Chao's Petit Garden" in "Sonic Advance"</font></b></font></font></div>
+                  <div align="center"><font size="5"><font size="2"><b><font size="3">Tiny Chao Garden in Sonic Advance</font></b></font></font></div>
                 </td>
               </tr>
             </table>
@@ -69,8 +69,8 @@ body{
         </tr>
         <tr> 
           <td> 
-            <div align="center"><font size="2">You can buy nuts by the number of rings you get in the main game,<br>
-              and you can also get more rings in the mini-games "Okashi Mekko Chao" and "Rock, Paper, Scissors".</font></div>
+            <div align="center"><font size="2">You can buy nuts with rings you got in the main game,<br>
+              and you can also get more rings in the mini-games Chao Memory and Rock, Paper, Scissors.</font></div>
           </td>
         </tr>
         <tr> 
@@ -80,7 +80,7 @@ body{
         </tr>
         <tr>
           <td>
-            <div align="center"><font size="2">There are also Chao eggs that can only be found in the "Petit Garden". 
+            <div align="center"><font size="2">There are also Chao eggs that can only be found in the Tiny Chao Garden. 
               <br>
               You can transfer Chao and nuts to the Chao Garden. <br>
               If you save your Chao to a cartridge, you can carry them around with you and train them. </font></div>
@@ -90,7 +90,7 @@ body{
       <table width="530" border="0" cellspacing="1" cellpadding="1">
         <tr> 
           <td> 
-            <div align="right"><font size="1" color="#006600">* The image is from the Game Boy Advance version.</font></div>
+            <div align="right"><font size="1" color="#006600">*The image is from the Game Boy Advance version.</font></div>
           </td>
         </tr>
       </table>
@@ -104,8 +104,8 @@ body{
             <table width="522" border="0" cellspacing="1" cellpadding="1" bgcolor="#000000">
               <tr> 
                 <td bgcolor="#FF0000"> 
-                  <div align="center"><font size="5"><b><font size="3">"Chao Garden"
-                    in "Sonic Adventure 2 Battle"</font></b></font></div>
+                  <div align="center"><font size="5"><b><font size="3">Chao Garden
+                    in Sonic Adventure 2 Battle</font></b></font></div>
                 </td>
               </tr>
             </table>
@@ -114,11 +114,11 @@ body{
         <tr> 
           <td> 
             <p><font size="2"><br>
-              You can raise small animals and Chaos Drives obtained in the main game by feeding them, loving them, or letting them compete in Chao Races! <br>
+              You can raise Chao by feeding them, giving them small animals or Chaos Drives obtained in the main game. You can love them, and you can even have them compete in races! <br>
               <br>
-              When you insert Chao into the Outing Machine, you can transfer it to "Chao's Petit Garden" on the Game boy Advance. <br>
+              When you insert Chao into the machine, you can transfer it to the Tiny Chao Garden on the Game boy Advance. <br>
               <br>
-              You can transfer the Chao you grew in "Chao's Petit Garden" and the nuts you bought to the Chao Garden.</font></p>
+              You can transfer the Chao you grew in Tiny Chao Garden and the nuts you bought to the Chao Garden.</font></p>
           </td>
         </tr>
       </table>
@@ -133,7 +133,7 @@ body{
       </table>
       <br>
       <b><img src="image/d1.gif" height="15"> <a href="index.html" target="_top"><font color="#00FF00"><font size="2" color="#FF0000">&lt;&lt; 
-      To "Sonic Advance" Top Page &gt;&gt;</font></font></a></b> <img src="image/d2.gif"> 
+      To Sonic Advance Home Page &gt;&gt;</font></font></a></b> <img src="image/d2.gif"> 
       <br>
       <br>
       <hr width="530" size="2">
