--- a/japan/advance/game.html
+++ b/japan/advance/game.html
@@ -25,12 +25,12 @@ body{
   <table width="550" border="0" cellspacing="2" cellpadding="2" bgcolor="#FFFFFF">
     <tr> 
       <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">GAME START 
-        ( 1P PLAY ) </font></b></font></td>
+        (1 PLAYER) </font></b></font></td>
     </tr>
     <tr> 
       <td> 
         <div align="left"><font size="2">This is a one-player-only game mode.<br>
-          In the main game of this game, you control the player character to clear each zone.<br>
+          In the main mode of this game, you control the character to clear each zone.<br>
           Many of the zones are divided into Act 1 and Act 2, with Act 2 being a confrontation with a boss mech piloted by Dr. Eggman.</font></div>
       </td>
     </tr>
@@ -46,22 +46,22 @@ body{
   </font> 
   <table width="550" border="0" cellspacing="2" cellpadding="2" bgcolor="#FFFFFF">
     <tr> 
-      <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">VS (2 to 4P 
-        PLAY) </font></b></font></td>
+      <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">VS (2 to 4 
+        PLAYERS) </font></b></font></td>
     </tr>
     <tr> 
       <td> 
         <div align="left"><font size="2"><img src="image/game_vs.gif" width="100" height="67" align="left"><br>
-          If you connect the Game Boy Advance communication cable, up to four players can enjoy the game at the same time.<br>
-          All of us have cartidges.<font color="#FF0000"><b>"Multi-Cartridge Battle"</b></font>と、<br>
-          Play with a single cartridge.<b><font color="#FF0000">"One Cartridge Match"</font></b>You can enjoy.</font></div>
+          If you connect the Game Boy Advance link cable, up to four players can enjoy the game at the same time.<br>
+          If you all have a copy of the game, <font color="#FF0000"><b>Multi-Cartridge Battle</b></font>  will be good for you.<br>
+          If you are the only one with a copy, don't worry, <b><font color="#FF0000">One Cartridge Match</font></b> is an enjoyable experience as well!</font></div>
       </td>
     </tr>
     <tr>
       <td>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
           <tr> 
-            <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Multi-Cartridge Battle</font></b></font></td>
+            <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Multi-Cartridge Battle</font></b></font></td>
           </tr>
           <tr> 
             <td bgcolor="#66CCFF"><font size="2">You will need enough cartridges for the number of players, and you can play cooperatively in two teams.</font></td>
@@ -69,10 +69,10 @@ body{
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　One cartridge match</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　One Cartridge Match</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#00CC99"><font size="2">If you have one cartridge, you can play against each other. The game you can play is "Collecting Rings".</font><font size="2"></font></td>
+            <td bgcolor="#00CC99"><font size="2">If you have only one cartridge, you can play against each other. In this mode, you collect rings.</font><font size="2"></font></td>
           </tr>
         </table>
       </td>
@@ -82,7 +82,7 @@ body{
   <table width="550" border="0" cellspacing="2" cellpadding="2" bgcolor="#FFFFFF">
     <tr> 
       <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">TIME ATTACK 
-        (1P PLAY) </font></b></font></td>
+        (1 PLAYER) </font></b></font></td>
     </tr>
     <tr> 
       <td> 
@@ -102,33 +102,33 @@ body{
         <div align="left">
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
             <tr> 
-              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Personal data</font></b></font></td>
+              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Personalization</font></b></font></td>
             </tr>
             <tr> 
               <td bgcolor="#66CCFF"><font size="2">You can register your name and check the results of your matches.<br>
-                You can enter up to six alphanumeric characters for the name.</font></td>
+                You can enter up to six alphanumeric characters for your name.</font></td>
             </tr>
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
             <tr> 
-              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　Degree of difficulty</font></b></font></td>
+              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font color="#FFFFFF" size="2">Difficulty</font></b></font></td>
             </tr>
             <tr> 
               <td bgcolor="#00CC99"><font size="2">You can change the difficulty of the game.<br>
-                There are two types: "Normal" and "Easy".</font></td>
+                You can choose between Easy, and Normal.</font></td>
             </tr>
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
             <tr> 
-              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Passing the deadline</font></b></font></td>
+              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Time Limit</font></b></font></td>
             </tr>
             <tr> 
-              <td bgcolor="#66CCFF"><font size="2">You can change the down due to time loss in the game to "Yes" or "No".</font></td>
+              <td bgcolor="#66CCFF"><font size="2">You can change the Time Limit option by selecting Yes or No.</font></td>
             </tr>
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
             <tr> 
-              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　Listen to the sound</font></b></font></td>
+              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font color="#FFFFFF" size="2">Sound Test</font></b></font></td>
             </tr>
             <tr> 
               <td bgcolor="#00CC99"><font size="2">You can listen to the BGM in the game. There are 42 tracks in total.</font></td>
@@ -136,26 +136,26 @@ body{
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
             <tr> 
-              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Choose one's language</font></b></font></td>
+              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Language</font></b></font></td>
             </tr>
             <tr> 
-              <td bgcolor="#66CCFF"><font size="2">You can choose between "Japanese" and "English".</font></td>
+              <td bgcolor="#66CCFF"><font size="2">You can choose between Japanese and English.</font></td>
             </tr>
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
             <tr> 
-              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　Button operation</font></b></font></td>
+              <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font color="#FFFFFF" size="2">Buttons</font></b></font></td>
             </tr>
             <tr> 
-              <td bgcolor="#00CC99"><font size="2">You can change the operation of the A and B buttons. Normal is the initial state, while reverse will switch the operation.</font></td>
+              <td bgcolor="#00CC99"><font size="2">You can switch the control of the A and B buttons. Normal is the initial state, while reverse will switch the two.</font></td>
             </tr>
           </table>
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
             <tr> 
-              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Erase all records</font></b></font></td>
+              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Deleting Data</font></b></font></td>
             </tr>
             <tr> 
-              <td bgcolor="#66CCFF"><font size="2">You can delete all data except for "Chao's Petit Garden" and initialize the saved data.</font></td>
+              <td bgcolor="#66CCFF"><font size="2">You can delete all data except for Tiny Chao Garden, and initialize the saved data. (WARNING: Rings don't sync up if you delete all data.)</font></td>
             </tr>
           </table>
           
@@ -167,20 +167,20 @@ body{
   <table width="550" border="0" cellspacing="2" cellpadding="2" bgcolor="#FFFFFF">
     <tr> 
       <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">SPECIAL STAGE 
-        ( 1P PLAY ) </font></b></font></td>
+        (1 PLAYER) </font></b></font></td>
     </tr>
     <tr> 
       <td> 
         <div align="left">
           <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
             <tr> 
-              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Chao's Petit Garden</font></b></font></td>
+              <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Tiny Chao Garden</font></b></font></td>
             </tr>
             <tr> 
               <td bgcolor="#66CCFF"> 
-                <p><font size="2"><a href="chao.html" target="_self"><img src="image/game_chao.gif" width="100" height="67" align="left" border="0"></a>You can feed your Chao with nuts and other things to make them grow. Also, the GameCube version <b><font color="#FF0000">"Sonic Adventure 2 Battle"</font></b> , allows you to transfer the Chao you have grown.<br>
+                <p><font size="2"><a href="chao.html" target="_self"><img src="image/game_chao.gif" width="100" height="67" align="left" border="0"></a>You can feed your Chao with nuts and other things to make them grow. The GameCube version of <b><font color="#FF0000">Sonic Adventure 2 Battle</font></b> allows you to transfer the Chao you have grown.<br>
                   <br>
-                  <a href="chao.html" target="_self"><b>← Go to [Chao's Petit Garden] page!</b></a> 
+                  <a href="chao.html" target="_self"><b>← Go to the [Tiny Chao Garden] page!</b></a> 
                   </font></p>
               </td>
             </tr>
@@ -191,7 +191,7 @@ body{
   </table>
   <br>
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"> 
-  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To "Sonic Advance" Top Page 
+  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To Sonic Advance Home Page 
   &gt;&gt;</font></a></font></font></b> <img src="image/d2.gif"> <br>
   <br>
   <hr width="530" size="2">
