--- a/japan/advance/index.html
+++ b/japan/advance/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>SONIC ADVANCE</title>
+<title>Sonic Advance</title>
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 </head>
 <frameset rows="100,*" frameborder="NO" border="0" framespacing="0"> 
