--- a/japan/advance/rule.html
+++ b/japan/advance/rule.html
@@ -41,7 +41,7 @@ body{
       <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">ACT SELECT</font></b></font></td>
     </tr>
     <tr> 
-      <td><font size="2">Acts will start from "ZONE 1 ACT 1" for each player character you choose. For each player character, the clear data of the ZONE is saved separately, so you can only select the Act that you are challenging.</font></td>
+      <td><font size="2">Acts start from "ZONE 1 ACT 1" for each character you choose. For each player character, the ZONE data is saved separately, so you can only select an Act that you have beaten.</font></td>
     </tr>
   </table>
   <br>
@@ -50,7 +50,7 @@ body{
       <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">CLEAR METHOD</font></b></font></td>
     </tr>
     <tr> 
-      <td><font size="2">The requirements for clearing the Act differ between Act 1 and Act 2. In Act 1, you must pass through the clear panel, and in Act 2, you must defeat the boss and rescue the animals from the capsule to complete the Act.</font></td>
+      <td><font size="2">The requirements for clearing the Act differ between Act 1 and Act 2. In Act 1, you must pass through the Goal Sign, and in Act 2, you have to defeat the boss and rescue the animals from the capsule to complete the Act.</font></td>
     </tr>
   </table>
   <br>
@@ -62,67 +62,67 @@ body{
       <td>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
           <tr> 
-            <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼　Rings</font></b></font></td>
+            <td><font size="2" color="#FF0000"><b><font color="#FFFFFF">Rings</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#66CCFF"><font size="2"><img src="image/ring.gif" width="11" height="16" align="left">[Always have at least one with you.]<br>
-              If you have one of the rings available in the Act, you will not die even if you take damage from gimmicks or enemy attacks. However, all the rings you had will be scattered all over the field, so hurry up and pick them up.</font></td>
+            <td bgcolor="#66CCFF"><font size="2"><img src="image/ring.gif" width="11" height="16" align="left">[Have at least one with you at all times.]<br>
+              If you have a ring available in an Act, you will not die even if you take damage from traps or enemy attacks. However, all the rings you had will be scattered all over the field, so pick them up quick!</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font color="#FFFFFF" size="2">　Point Markers</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font color="#FFFFFF" size="2">Checkpoints</font></b></font></td>
           </tr>
           <tr> 
             <td bgcolor="#00CC99"><font size="2"><img src="image/point.gif" width="15" height="48" align="left">[Restart point after death.]<br>
-              Point markers are placed at various locations in the Act. If you touch these point markers, you can restart from that point marker point even if you die in the Act.</font></td>
+              Checkpoints are placed at various locations in an Act. If you touch these checkpoints, you'll restart from that point if you die.</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font size="2" color="#FFFFFF">　1up</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font size="2" color="#FFFFFF">1-ups</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#66CCFF"><font size="2"><img src="image/rule_1up.gif" width="16" height="16" align="left">[</font><font size="2">How to increase the number of lives]<br>
-              If you collect 100 rings or get a 1UP item, the number of lives will increase by one. In taddition, for every 50,000 points scored, the number of lives will increase by one.</font></td>
+            <td bgcolor="#66CCFF"><font size="2"><img src="image/rule_1up.gif" width="16" height="16" align="left">[</font><font size="2">Increases life count.]<br>
+              If you collect 100 rings or get a 1-UP item, you'll get a 1-up. As is tradition, for every 50,000 points, you'll get a 1-up.</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font size="2" color="#FFFFFF">　Item Box</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font size="2" color="#FFFFFF">Item Box</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#00CC99"><font size="2"><img src="image/item_box.gif" width="28" height="29" align="left">[Break them to get the items.]<br>
-              Even if you find an item, you cannot get it unless you destroy the item box. Use special attacks to destroy it and get the item inside.</font></td>
+            <td bgcolor="#00CC99"><font size="2"><img src="image/item_box.gif" width="28" height="29" align="left">[Break them to get the item.]<br>
+              Even if you find an item, you cannot get it unless you destroy the item box. Use your attacks to destroy it and get the item inside.</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font size="2" color="#FFFFFF">　Special Stage</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font size="2" color="#FFFFFF">Special Stage</font></b></font></td>
           </tr>
           <tr> 
             <td bgcolor="#66CCFF"><font size="2"><img src="image/rule_sp.gif" width="100" height="67" align="left"><br>
               [Let's collect the rings scattered around.]<br>
-              Special Stages can be accessed by using special springs in the field. If you collect the specified number of rings in a special stage, you can get the Chaos Emerald.</font></td>
+              Special Stages can be accessed by using special springs in an Act. If you collect the specified number of rings, you get a Chaos Emerald.</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font size="2" color="#FFFFFF">　Death</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font size="2" color="#FFFFFF">Death</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#00CC99"><font size="2">[</font><font size="2">There are many dangers in the Act.]<br>
-              If you take damage while not holding any rings, you will die and lose one life. In addition to damage, you may also die.
-              (such as falling from a floorless area or not being able to replenish oxygen in the water)</font></td>
+            <td bgcolor="#00CC99"><font size="2">[</font><font size="2">There are many dangers in an Act.]<br>
+              If you take damage without a ring or a shield, you will die and lose a life.
+              (Falling down a pit and drowning will kill you with/without protection.)</font></td>
           </tr>
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066CC">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">▼</font></b></font><font size="2" color="#FFFFFF">　Continuation</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font size="2" color="#FFFFFF">Continues</font></b></font></td>
           </tr>
           <tr> 
-            <td bgcolor="#66CCFF"><font size="2">[</font><font size="2">Let's try again to clear it.]<br>
-              The number of lives decreases as you die, and when it reaches zero, the game is over. However, if you have enough continues left, you can try again.</font></td>
+            <td bgcolor="#66CCFF"><font size="2">[</font><font size="2">Let's try this Act again.]<br>
+              Your life count will go down as you die, and when it reaches zero, you'll get a Game Over. But if you have enough continues left, you can try again.</font></td>
           </tr>
         </table>
         
@@ -131,7 +131,7 @@ body{
   </table>
 　<br>
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"> 
-  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To "Sonic Advance" Top Page 
+  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To Sonic Advance Home Page 
   &gt;&gt;</font></a></font></font></b> <img src="image/d2.gif"> <br>
   <br>
   <hr width="530" size="2">
