--- a/japan/advance/sec.html
+++ b/japan/advance/sec.html
@@ -24,13 +24,13 @@ body{
   <br>
   <table width="550" border="0" cellspacing="2" cellpadding="2" bgcolor="#FFFFFF">
     <tr> 
-      <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">SONIC2 MODE 
-        (COMMAND) </font></b></font></td>
+      <td bgcolor="#FF6600"><font size="2"><b><font color="#FFFF00">SONIC 2 MODE 
+        (CODE) </font></b></font></td>
     </tr>
     <tr> 
       <td> 
-        <div align="left"><font size="2">Sonic and Tails work together to advance the adventure.<b><font color="#FF0000">"Sonic 2 mode"</font></b>it is.<br>
-          In this mode, Tails will follow behind Sonic, who is controlled by the player.</font></div>
+        <div align="left"><font size="2">Sonic and Tails work together to advance the adventure.<b><font color="#FF0000">Sonic 2 mode</font></b> is its name.<br>
+          In this mode, Tails will follow behind Sonic, who's controlled by the player.</font></div>
       </td>
     </tr>
     <tr> 
@@ -71,23 +71,23 @@ body{
     <tr>
       <td><font size="2">Steps<br>
         <br>
-        1: Move the cursor to "Sonic" on the character select screen and press the cross button [UP] once.<br>
-        2: Next, place the cursor on "Tails" and press the cross button [DOWN] once.<br>
-        3: Next, move the cursor to "Knuckles" and press the [L] button once.<br>
-        4: Next, place the cursor on "Amy" and press the [R] button once.<br>
+        1: Go to Sonic on the character select screen and press the D-Pad up once.<br>
+        2: Next, go to Tails and press the D-Pad down once.<br>
+        3: Next, go to Knuckles and press the L button once.<br>
+        4: Next, go to Amy and press the R button once.<br>
         5: Finally, move the cursor over "Sonic" again and enter the [A] button. <br>
         <br>
-        If you hear the sound of a ring being taken when you decide on the player character, the command input was successful. <br>
+        If you hear the sound of a ring being taken when you decide on the player character, the code was successful. <br>
         <br>
-        <font color="#FF0000"><b>--Points to note--</b><br>
-        In Sonic 2 mode, you can go to the EXTRA ZONE if you meet the requirements, but Tails will not follow you to the EXTRA ZONE or the Special Stage. Also, this command is not valid in Battle or Time Attack mode.</font></font></td>
+        <font color="#FF0000"><b>--Notes--</b><br>
+        In Sonic 2 mode, you can go to the EXTRA ZONE if you meet the requirements, but Tails will not follow you to the EXTRA ZONE or the Special Stage. This code isn't valid in Battle or Time Attack mode.</font></font></td>
     </tr>
   </table>
   <font size="2"> 
-  <!-- ƒQ[ƒ€‚Ì—¬‚ê -->
+  <!-- Game Flow -->
   </font> <br>
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"> 
-  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To "Sonic Advance" Top Page 
+  <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To Sonic Advance Home Page 
   &gt;&gt;</font></a></font></font></b> <img src="image/d2.gif"> <br>
   <br>
   <hr width="530" size="2">
