--- a/japan/advance/top.html
+++ b/japan/advance/top.html
@@ -26,24 +26,23 @@ scrollbar-base-color:#0099ff;
     <tr> 
       <td height="37" width="160"> 
         <p align="center"><font size="3"><b><font size="2"><br>
-          <img src="image/sgba_pack.jpg" alt="Sonic Advance Package" width="140" height="89" border="1"><a href="http://segadirect.jp/Catalog/ProductDetail.aspx?SKU=0101010-00050&ST=PT&PT=GBA&O=P&A=Y" target="_blank"><br>
+          <img src="image/sgba_pack.jpg" alt="Sonic Advance Package" width="140" height="89" border="0"><a href="http://segadirect.jp/Catalog/ProductDetail.aspx?SKU=0101010-00050&ST=PT&PT=GBA&O=P&A=Y" target="_blank"><br>
           <br>
           <img src="segadirect.gif" width="100" height="56" border="0" alt="SEGA Direct"></a><font color="#000000"><b><font color="#FF0000" size="1"><br>
           Now on sale at SEGA Direct!</font></b></font></font></b></font></p>
       </td>
       <td valign="top"><font size="3"><b><font size="2" color="#000099"><br>
-        Released by: SEGA Corporation<br>
-        Supported models: Game Boy Advance<br>
-        Release date: December 20, 2001<br>
-        Price:　<b>\5,800 (tax included \6,090</b></font><font size="2" color="#000099"><b>)</b><br>
+        Publisher: SEGA Corporation (JP), THQ, Inc. (NA), Infogrames Entertainment SA (EU)<br>
+        Platform: Game Boy Advance<br>
+        Release date: December 20, 2001 (JP), February 3, 2002 (NA), March 8, 2002 (EU)<br>
+        Price:<b> \5,800 (tax included: \6,090) (JP), $39.99 (US), ￡34.99 (UK</b></font><font size="2" color="#000099"><b>)</b><br>
         Genre: Action<br>
         Number of players: 1 to 4 players (supports 4 players per cartridge)<br>
-        Compatible peripherals: Communication cable, GBA cable<br>
+        Compatible peripherals: Link Cable<br>
         <br>
         </font><font size="2" color="#FF0000">Sonic Advance Value Edition</font><font size="2"><br>
-        <font color="#000099">　　It's now available again at an affordable price! </font></font></b></font><font color="#000099"><br>
-        <font size="3"><b><font size="2">　　Release date: June 17, 2004 <br>
-      　　Price: 3,800 yen (3,990 yen including tax) </font></b></font></font></td>
+        <font color="#000099">It's now available again at an affordable price! </font></font></b></font><font color="#000099"><br>
+        <font size="3"><b><font size="2">Release date: June 17, 2004 <br>Price: 3,800 yen (3,990 yen including tax) </font></b></font></font></td>
     </tr>
   </table>
   <br>
@@ -52,14 +51,14 @@ scrollbar-base-color:#0099ff;
       <td width="156"> 
         <div align="center"><a href="../advance3/index.html" target="_blank"><img src="image/sonicadvance3_banner.gif" width="150" height="45" border="0" alt="Sonic Advance 3 Official Website"></a></div>
       </td>
-      <td> <font size="2"><font color="#000000"><b><font color="#FF0000">"Sonic Advance 3"<br>
+      <td> <font size="2"><font color="#000000"><b><font color="#FF0000">Sonic Advance 3<br>
         </font><font size="2"><font color="#000000"><b><font color="#FF0000">Now on sale!</font></b></font></font></b></font></font></td>
     </tr>
     <tr> 
       <td> 
         <div align="center"><a href="../advance2/index.html" target="_blank"><img src="image/s_sonicgba2_banner.gif" width="150" height="45" border="0" alt="Sonic Advance 2 Official Website"></a></div>
       </td>
-      <td> <font size="2"><font color="#000000"><b><font color="#FF0000">"Sonic Advance 2"<br>
+      <td> <font size="2"><font color="#000000"><b><font color="#FF0000">Sonic Advance 2<br>
         Now on sale!</font></b></font></font></td>
     </tr>
   </table>
@@ -72,7 +71,7 @@ scrollbar-base-color:#0099ff;
         <table width="522" border="0" cellspacing="1" cellpadding="1" bgcolor="#000000">
           <tr> 
             <td bgcolor="#2CC120"> 
-              <div align="center"><font size="5"><b><font size="3" color="#FFFFFF">Sonic is coming to the Game Boy Advance!</font></b></font></div>
+              <div align="center"><font size="5"><b><font size="3" color="#FFFFFF">Sonic's coming to the Game Boy Advance!</font></b></font></div>
             </td>
           </tr>
         </table>
@@ -80,12 +79,12 @@ scrollbar-base-color:#0099ff;
     </tr>
     <tr> 
       <td> <img hspace=10 align="right" src="sgba01.gif" width="210" height="140" alt="sonic1" nowrap> 
-        <font size="2">The 10th anniversary of Sonic's birth has arrived on the Game Boy Advance!<br>
+        <font size="2">In celebration of Sonic's 10th anniversary, he's arrived on the Game Boy Advance!<br>
         <br>
-        </font> <font size="2">This is the latest side-scrolling action game in the series, reminiscent of Sonic's origins, befitting the 10th anniversary of his birth. The overwhelming sense of speed, the variety of stages and gimmicks, and the unique characters are the very essence of the Sonic series.</font> 
-        <font size="2">* Sonic the Hedgehog turned 10 years old on June 23, 2001<br>
+        </font> <font size="2">This is the latest side-scrolling action game in the series, reminiscent of Sonic's origins, befitting the 10th anniversary of the franchise. The overwhelming sense of speed, the variety of stages and gimmicks, and the unique characters are the very essence of the Sonic franchise.</font> 
+        <font size="2">*Sonic the Hedgehog turned 10 years old on June 23, 2001<br>
         <br>
-        Since his birth in June 1991 for the Mega Drive (Genesis), the "Sonic" series has been a very popular series that has sold over 25 million copies worldwide.</font> 
+        Since his first game in June 1991 for the Mega Drive (Genesis), the Sonic franchise has been so popular, that there have been over 25 million sales worldwide.</font> 
       </td>
     </tr>
   </table>
@@ -106,14 +105,14 @@ scrollbar-base-color:#0099ff;
     </tr>
     <tr> 
       <td> 
-        <p><font size="2"><img hspace=10 align="left" src="sgba04.gif" width="210" height="140" alt="sonic2" nowrap>In this side-scrolling action game, you must defeat enemies and collect rings in order to reach the Chaos Emerald. Tails, Knuckles, and Amy also make an appearance as reliable companions. Sonic's high-speed dashes and rolling attacks, Tails' flying by spinning his tails, Knuckles' powerful gliding, and Amy's jumping and attack with her bouncy hammer are all unique actions, join forces to crush Dr. Eggman's ambitions!<br>
+        <p><font size="2"><img hspace=10 align="left" src="sgba04.gif" width="210" height="140" alt="sonic2" nowrap>In this side-scrolling action game, you must defeat enemies and collect rings in order to reach the Chaos Emerald. Tails, Knuckles, and Amy also make an appearance as reliable companions. Sonic's high-speed dashing and rolling attacks, Tails' flying by spinning his tails, Knuckles' powerful gliding, and Amy's jumping and attack with her bouncy hammer are all unique actions, join forces to crush Dr. Eggman's ambitions!<br>
           </font></p>
         <font size="2"> <img hspace=10 align="right" src="sgba02.gif" width="210" height="140" alt="sonic3" nowrap></font> 
         <p><font size="2"><br>
           <br>
           <br>
           <br>
-          These actions, which have been difficult to reproduce in mobile games until now, have been completely recreated in this title! Four players can battle each other on one cartridge, and each of the four characters will have a blast!<br>
+          These actions, which have been difficult to reproduce in portable games until now, have been completely recreated in this title! Four players can battle each other on one cartridge, and each of the four characters will have a blast!<br>
           </font> </p>
       </td>
     </tr>
@@ -130,9 +129,9 @@ scrollbar-base-color:#0099ff;
     </tr>
   </table>
   <br>
-  <!-------マウスと共に移動するbodyここまで---------->
+  <!-------Move with the mouse to the body here---------->
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"></font></font> 
-  <font size="2"><a href="http://sega.jp/" target="_top"><font color="#FF0000">&lt;&lt; Return &gt;&gt;</font></a></font></b> <img src="image/d2.gif"><br>
+  <font size="2"><a href="/index.html" target="_top"><font color="#FF0000">&lt;&lt; Return &gt;&gt;</font></a></font></b> <img src="image/d2.gif"><br>
 </div>
 <hr width="530" size="2" align="center">
 <div align="center" class="style2"><font size="2">&copy; SEGA</font></div>
