--- a/japan/advance/menu.html
+++ b/japan/advance/menu.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>SONIC ADVANCE</title>
+<title>Sonic Advance</title>
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 <script language="JavaScript">
 <!--
