--- a/sonichq/megaman/features/updateboard.html
+++ b/sonichq/megaman/features/updateboard.html
@@ -12,7 +12,7 @@ A{text-decoration:none}
 .updatetitle {background-color:#595959; width:100%; align:center; font-size:16; font-weight:bold; color:white;}
 -->
 </style>
-<base href=/sonichq/megaman>
+<base href=/sonichq/megaman/>
 </head>
 
 <body text="#000000" bgcolor="#FFFFFF" link="#FFA500" vlink="#ffa500" background="images/backgrounds/TailsGrayBG.gif">
