--- a/sonichq/images/boxes/sonicmusic/sonicmusic.htm
+++ b/sonichq/images/boxes/sonicmusic/sonicmusic.htm
@@ -12,21 +12,21 @@
 <body bgcolor=ffffff text=000000 link=blue vlink=blue>
 
 <center><table width=70%><tr align=center>
-      <td><img src="/sonichq/angelfire//images/logo.gif" alt="Logo" border=0> 
+      <td><img src="/sonichq/angelfire/images/logo.gif" alt="Logo" border=0> 
         <font face=Verdana> 
         <p><font size=+2 color=4B1FFC>Sonic Music CD Covers</font>
         <p><table width=100% border=1 cellspacing=0 cellpadding=3 bordercolorlight=blue bordercolordark=23238E><tr><td>
               <p><font size=-1>This page includes pictures of Sonic the Hedgehog 
                 music CD covers. These images are from the Japanese SEGA site: 
-                <a href="https://web.archive.org/20011101000000/http://www.sega.co.jp">www.sega.co.jp</a>.</font>
+                <a href="https://web.archive.org/20011111000000/http://www.sega.co.jp">www.sega.co.jp</a>.</font>
             </td></tr></table>
  <!-- main table top --> 
         <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
-<tr><td width=19><img src="/sonichq/emuzone/topleft.gif" width=19></td>
+<tr><td width=19><img src="https://web.archive.org/20011111000000/http://www.emulationzone.org/sonichq/topleft.gif" width=19></td>
 
 <td bgcolor=black width=100%><center><font size=+3 color=4B1FFC>Sonic HQ Gallery</font></center></td>
 
-<td width=19><img src="/sonichq/emuzone/topright.gif" width=19></td></tr>
+<td width=19><img src="https://web.archive.org/20011111000000/http://www.emulationzone.org/sonichq/topright.gif" width=19></td></tr>
 </table>
 <!-- end main table top -->
 
@@ -210,8 +210,8 @@
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href=../><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
-<td><img SRC="/sonichq/emuzone/bottomleft.gif" BORDER=0 height=20></td>
-<td><img SRC="/sonichq/emuzone/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="https://web.archive.org/20011111000000/http://www.emulationzone.org/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="https://web.archive.org/20011111000000/http://www.emulationzone.org/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
